@@ -1,11 +1,9 @@
 package pl.symentis.alge.runtime;
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodType;
 
 public class SDL_events {
 
@@ -15,11 +13,10 @@ public class SDL_events {
 
     public static int SDLK_RIGHT = 1073741903;
     public static final int SDLK_SPACE = 32;
-    private static final MethodHandle SDL_PollEvents_mh = CLinker.getInstance()
+    private static final MethodHandle SDL_PollEvents_mh = Linker.nativeLinker()
             .downcallHandle(
                     SDLRuntime.lookupSymbol("SDL_PollEvent"),
-                    MethodType.methodType(int.class, MemoryAddress.class),
-                    FunctionDescriptor.of(CLinker.C_INT, CLinker.C_POINTER));
+                    FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
 
     public static boolean pollEvent(SDL_Event event) {
         int resp = 0;
